// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<form
  className="project-baseline-selector"
  onSubmit={[MockFunction]}
>
  <div
    className="big-spacer-top spacer-bottom"
    role="radiogroup"
  >
    <Radio
      checked={true}
      className="big-spacer-bottom"
      onCheck={[Function]}
      value="general"
    >
      project_baseline.general_setting
    </Radio>
    <div
      className="big-spacer-left"
    >
      <div
        className="general-setting"
      >
        <strong>
          baseline.previous_version
        </strong>
        : 
        baseline.previous_version.description
      </div>
    </div>
    <Radio
      checked={false}
      className="huge-spacer-top"
      onCheck={[Function]}
      value="specific"
    >
      project_baseline.specific_setting
    </Radio>
  </div>
  <div
    className="big-spacer-left big-spacer-right project-baseline-setting"
  >
    <div
      className="display-flex-row big-spacer-bottom"
      role="radiogroup"
    >
      <BaselineSettingPreviousVersion
        disabled={true}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingDays
        days="12"
        disabled={true}
        isChanged={false}
        isValid={true}
        onChangeDays={[MockFunction]}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingReferenceBranch
        branchList={
          [
            {
              "isMain": true,
              "label": "master",
              "value": "master",
            },
          ]
        }
        disabled={true}
        onChangeReferenceBranch={[MockFunction]}
        onSelect={[MockFunction]}
        referenceBranch="master"
        selected={false}
        settingLevel="project"
      />
    </div>
  </div>
  <div
    className="big-spacer-top invisible"
  >
    <Alert
      className="spacer-bottom"
      variant="info"
    >
      baseline.next_analysis_notice
    </Alert>
    <DeferredSpinner
      className="spacer-right"
      loading={false}
    />
    <SubmitButton
      disabled={true}
    >
      save
    </SubmitButton>
    <ResetButtonLink
      className="spacer-left"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</form>
`;

exports[`should render correctly 2`] = `
<form
  className="project-baseline-selector"
  onSubmit={[MockFunction]}
>
  <div
    className="big-spacer-top spacer-bottom"
    role="radiogroup"
  >
    <Radio
      checked={true}
      className="big-spacer-bottom"
      onCheck={[Function]}
      value="general"
    >
      project_baseline.general_setting
    </Radio>
    <div
      className="big-spacer-left"
    >
      <div
        className="general-setting"
      >
        <strong>
          baseline.number_days (duration.days.23)
        </strong>
        : 
        baseline.number_days.description
      </div>
    </div>
    <Radio
      checked={false}
      className="huge-spacer-top"
      onCheck={[Function]}
      value="specific"
    >
      project_baseline.specific_setting
    </Radio>
  </div>
  <div
    className="big-spacer-left big-spacer-right project-baseline-setting"
  >
    <div
      className="display-flex-row big-spacer-bottom"
      role="radiogroup"
    >
      <BaselineSettingPreviousVersion
        disabled={true}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingDays
        days="12"
        disabled={true}
        isChanged={false}
        isValid={true}
        onChangeDays={[MockFunction]}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingAnalysis
        disabled={true}
        onSelect={[MockFunction]}
        selected={false}
      />
    </div>
  </div>
  <div
    className="big-spacer-top invisible"
  >
    <Alert
      className="spacer-bottom"
      variant="info"
    >
      baseline.next_analysis_notice
    </Alert>
    <DeferredSpinner
      className="spacer-right"
      loading={false}
    />
    <SubmitButton
      disabled={true}
    >
      save
    </SubmitButton>
    <ResetButtonLink
      className="spacer-left"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</form>
`;

exports[`should render correctly 3`] = `
<form
  className="project-baseline-selector"
  onSubmit={[MockFunction]}
>
  <div
    className="big-spacer-top spacer-bottom"
    role="radiogroup"
  >
    <Radio
      checked={true}
      className="big-spacer-bottom"
      onCheck={[Function]}
      value="general"
    >
      project_baseline.general_setting
    </Radio>
    <div
      className="big-spacer-left"
    >
      <div
        className="general-setting"
      >
        <strong>
          baseline.number_days (duration.days.?)
        </strong>
        : 
        baseline.number_days.description
      </div>
    </div>
    <Radio
      checked={false}
      className="huge-spacer-top"
      onCheck={[Function]}
      value="specific"
    >
      project_baseline.specific_setting
    </Radio>
  </div>
  <div
    className="big-spacer-left big-spacer-right project-baseline-setting"
  >
    <div
      className="display-flex-row big-spacer-bottom"
      role="radiogroup"
    >
      <BaselineSettingPreviousVersion
        disabled={true}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingDays
        days="12"
        disabled={true}
        isChanged={false}
        isValid={true}
        onChangeDays={[MockFunction]}
        onSelect={[MockFunction]}
        selected={false}
      />
      <BaselineSettingAnalysis
        disabled={true}
        onSelect={[MockFunction]}
        selected={false}
      />
    </div>
  </div>
  <div
    className="big-spacer-top invisible"
  >
    <Alert
      className="spacer-bottom"
      variant="info"
    >
      baseline.next_analysis_notice
    </Alert>
    <DeferredSpinner
      className="spacer-right"
      loading={false}
    />
    <SubmitButton
      disabled={true}
    >
      save
    </SubmitButton>
    <ResetButtonLink
      className="spacer-left"
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</form>
`;
